@@ -65,6 +65,7 @@ void send_signal_with_integer(CPlugin * instance, ListItem * item, const gchar *
 gboolean request_boolean_value(CPlugin * instance, ListItem * item, const gchar * member);
 gdouble request_double_value(CPlugin * instance, ListItem * item, const gchar * member);
 gint request_int_value(CPlugin * instance, ListItem * item, const gchar * member);
+gchar *request_string_value(CPlugin * instance, ListItem * item, const gchar * member);
 gboolean is_valid_path(CPlugin * instance, const char *message);
 gint request_bitrate(CPlugin * instance, ListItem * item, gchar * name);
 
